tests/cases/negative/units-mismatch.frtl
y : Float[Unit[m]] = 2.0
x : Float[Unit[m]] = 1.0 
t : Float[Unit[s]] = 4.0

# should be Float[Unit[s^-1 * m]]
it : Float[Unit[s^-2 * m]] = (x + y) / t